# codex-voice-agent-attempt

./: .gitignore  README.md  pyproject.toml
docs/: STT_TTS_PRICING.md  voice_agent_plan.md
src/voice_agent/: __init__.py  app.py  audio.py  audio_io.py  audio_player.py  config.py  dialog.py  idle.py  llm.py  providers.py  session_store.py  stt.py  sub_agent.py  tool_parser.py  tool_runner.py  tts.py  vad.py  voice_cli.py  voice_loop.py  wake.py
